# boilerplate

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  routes.py
app/core/product/: api.py  repository.py  schema.py  service.py
app/db/: base.py  session.py
app/db/models/: product.py
app/utils/: helpers.py
app/utils/base/: query_util.py  repository.py  router.py  schema.py  service.py
app/utils/fastapi_utils/: builder.py  exception.py
tests/: conftest.py
tests/integration/: conftest.py  test_health.py  test_products.py
tests/integration/utils/: session.py
tests/unit/: test_product_repository.py  test_product_service.py
